# hierarchical-config-merging

./: .gitignore  Readme.md  benchmark_deep_hierarchy.py  build_and_run.sh  cli.py  pyproject.toml
rust/: Cargo.toml
rust/src/: lib.rs  python_bindings.rs
src/hierarchical_config_merging/: __init__.py  config_merger.py
test_demo/: config.yaml
test_demo/a/: config.yaml
test_demo/a/b/: config.yaml
tests/: test_config_merger.py  test_rust_python_comparison.py
