[package]
name = "hierarchical_config_merging"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
walkdir = "2.3"

[dependencies.pyo3]
version = "0.20"
features = ["extension-module"]

[lib]
crate-type = ["cdylib"]
